--- a/bio.html
+++ b/bio.html
@@ -80,7 +80,7 @@
 						</figure>
 						<p>Dr. Raúl Montoliu <br></p>
 						<blockquote>
-							<p>Raúl Montoliu received the B.S degree in computer sciences in 1988 from the <a href="http://www.uji.es">Universitat Jaume I</a> of Castellon (Spain). In 2008, he received the Ph. D. degree in advanced computer systems from the same university. He is currently an Associate Professor at the <a href="http://www.icc.uji.es">Department of Computer Science and Engineering</a> and Senior Researcher at the <a href="http://www.init.uji.es">Institute of New Imaging Technologies</a> (INIT), both from Jaume I University. He is the coordinator of the <a href="http://ia3.uji.es">IA<sup>3</sup></a> research group.</p>
+							<p>Raúl Montoliu received the B.S degree in computer sciences in 1988 from the <a href="http://www.uji.es">Universitat Jaume I</a> of Castellon (Spain). In 2008, he received the Ph. D. degree in advanced computer systems from the same university. He is currently a Full Professor at the <a href="http://www.icc.uji.es">Department of Computer Science and Engineering</a> and Senior Researcher at the <a href="http://www.init.uji.es">Institute of New Imaging Technologies</a> (INIT), both from Jaume I University. He is the coordinator of the <a href="http://ia3.uji.es">IA<sup>3</sup></a> research group.</p>
 						</blockquote>
 						<a href="https://scholar.google.es/citations?user=ndCvmPYAAAAJ&hl=es"><img src="images/scholar.png" width="10%"></a>
 
